# ChangeLog for genkernel
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  28 Jun 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/modprobe,
  genkernel.conf:
  Restore BOOTLOADER="grub" example line in genkernel.conf for gentoo bug
  #274768

  12 May 2009; Andrew Gaffney <agaffney@gentoo.org> arch/x86/modules_load,
  defaults/initrd.scripts:
  Apply fix to deference links for gentoo bug #269603

  09 May 2009; Andrew Gaffney <agaffney@gentoo.org> arch/x86/modules_load:
  foo

  09 May 2009; Andrew Gaffney <agaffney@gentoo.org> arch/x86/modules_load,
  arch/x86_64/modules_load:
  Add dm-crypt module for gentoo bug #269042

  24 Apr 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel:
  Rolling a new genkernel 3.4.10.904 version for testing.

  17 Apr 2009; Andrew Gaffney <agaffney@gentoo.org> netboot/busy-config:
  Apply patch from gentoo bug #266373 for additional options in the netboot
  busy-config

  06 Mar 2009; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Clean up append_multipath() code to copy files in a loop and report file
  that failed to copy

  06 Mar 2009; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Apply patch from robbat2 to fix whitespace breakage in multipath code

  06 Mar 2009; Andrew Gaffney <agaffney@gentoo.org> gen_determineargs.sh,
  genkernel.conf:
  Apply patch from robbat2 to finish wiring up multipath support

  06 Mar 2009; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Modify append_data to die on 0 arguments and check arg 2 with isTrue().
  Based on a patch from robbat2

  20 Feb 2009; Andrew Gaffney <agaffney@gentoo.org> arch/sparc64/config.sh,
  gen_compile.sh, gen_funcs.sh, gen_package.sh:
  Add support for multiple possible kernel binary paths for gentoo bug
  #255085

  04 Feb 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc:
  Comment out the exec line for console=*, since it seems to blow up when