@@ -129,23 +129,6 @@ dump_debugcache
 
 NORMAL=${BOLD} print_info 1 "Linux Kernel ${BOLD}${KV}${NORMAL} for ${BOLD}${ARCH}${NORMAL}..."
 
-if [ "${BUILD_RAMDISK}" -ne '0' ]
-then
-	if ! has_loop
-	then
-		modprobe loop 2>/dev/null
-		sleep 3
-		if ! has_loop
-		then
-			print_error 1 'The build-host kernel does not appear to have loop device support.'
-			print_error 1 'Please load loop support before running genkernel!'
-			gen_die 'Load loop support!'
-		else
-			print_info 1 'loop: "loop" module loaded successfully...'
-		fi
-	fi
-fi
-
 # Check BOOTDIR is mounted
 if isTrue ${CMD_NOINSTALL}
 then
