@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
 # Distributed under the GPL v2
 
+  04 Jul 2009; Andrew Gaffney <agaffney@gentoo.org> gen_funcs.sh, genkernel:
+  Remove code to check for host kernel LOOP support for gentoo bug #275757
+
   28 Jun 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/modprobe,
   genkernel.conf:
   Restore BOOTLOADER="grub" example line in genkernel.conf for gentoo bug
